hphp/hack/doc/hack-langspec/tests/Expressions/Yield_Operator/yield_from.php.expectf

Fatal error: HH mode: content before <?hh (Line: 1, Char: 34)
syntax error, unexpected T_HH_ERROR, expecting $end in %s/tests/Expressions/Yield_Operator/yield_from.php on line 1